[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeenv"
version = "0.1.0"
description = "Automatic coding environment generator for basic development"
authors = ["Rares Sarmasag <rares.sarmasag@stud.acs.upb.ro>"]
license = "MIT"
readme = "README.md"

[project.urls]
Home = "https://github.com/rares9301/codeenv"

[project.scripts]
console_scripts = [
    "codeenv = coeenv.__main__:main",
]

[project.dependencies]
gitpython = "^3.1.24"

[project.dev-dependencies]
pytest = "^6.2.5"
